[workspace]
members = [
  "crates/bench",
  "crates/bindings-sys",
  "crates/bindings",
  "crates/bindings-macro",
  "crates/cli",
  "crates/client-api",
  "crates/client-api-messages",
  "crates/core",
  "crates/data-structures",
  "crates/lib",
  "crates/metrics",
  "crates/primitives",
  "crates/sats",
  "crates/sdk",
  "crates/sqltest",
  "crates/standalone",
  "crates/table",
  "crates/testing",
  "crates/vm",
  "modules/benchmarks",
  "modules/rust-wasm-test",
  "modules/quickstart-chat",
  "modules/sdk-test",
  "modules/sdk-test-connect-disconnect",
  "modules/spacetimedb-quickstart",
  "crates/sdk/tests/test-client",
  "crates/sdk/tests/test-counter",
  "crates/sdk/tests/connect_disconnect_client",
  "tools/upgrade-version",
]
default-members = ["crates/cli"]
# cargo feature graph resolver. v2 is default in edition2021 but workspace
# manifests don't have editions.
resolver = "2"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release-fast]
inherits = "release"
lto = "thin"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
debug = true

[workspace.dependencies]
ahash = "0.8"
anyhow = { version = "1.0.68", features = ["backtrace"] }
anymap = "0.12"
arrayvec = "0.7.2"
async-trait = "0.1.68"
axum = { version = "0.7", features = ["tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
backtrace = "0.3.66"
base64 = "0.21.2"
bitflags = "2.3.3"
bit-vec = "0.6"
blake3 = "1.5"
byte-unit = "4.0.18"
bytes = "1.2.1"
bytestring = { version = "1.2.0", features = ["serde"] }
cargo_metadata = "0.17.0"
chrono = { version = "0.4.24", default-features = false }
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
console = { version = "0.15.6" }
convert_case = "0.6.0"
criterion = { version = "0.5.1", features = ["async", "async_tokio", "html_reports"] }
criterion-perf-events = "0.4"
crossbeam-channel = "0.5"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
decorum = { version = "0.3.1", default-features = false, features = ["std"] }
derive_more = "0.99"
dirs = "5.0.1"
duct = "0.13.5"
either = "1.9"
email_address = "0.2.4"
enum-as-inner = "0.6"
enum-map = "2.6.3"
env_logger = "0.10"
flate2 = "1.0.24"
fs-err = "2.9.0"
fs2 = "0.4.3"
futures = "0.3"
futures-channel = "0.3"
getrandom = { version = "0.2.7", features = ["custom"] }
glob = "0.3.1"
headers = "0.4"
hex = "0.4.3"
home = "0.5"
hostname = "^0.3"
http = "1.0"
humantime = "2.1.0"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
im = "15.1"
imara-diff = "0.1.3"
indexmap = "2.0.0"
indicatif = "0.16"
insta = { version = "1.21.0", features = ["toml"] }
is-terminal = "0.4"
itertools = "0.12"
jsonwebtoken = { version = "8.1.0" }
lazy_static = "1.4.0"
log = "0.4.17"
mimalloc = "0.1.39"
nohash-hasher = "0.2"
once_cell = "1.16"
parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"] }
paste = "1.0"
pin-project-lite = "0.2.9"
postgres-types = "0.2.5"
proc-macro2 = "1.0"
prometheus = "0.13.0"
proptest = "1.4"
proptest-derive = "0.4"
prost = "0.10"
prost-build = { version = "0.10" }
quick-junit = { version = "0.3.2" }
quote = "1.0.8"
rand = "0.8.5"
rayon = "1.8"
rayon-core = "1.11.0"
regex = "1"
reqwest = { version = "0.11.10", features = ["stream", "json"] }
rusqlite = { version = "0.29.0", features = ["bundled", "column_decltype"] }
rust_decimal = { version = "1.29.1", features = ["db-tokio-postgres"] }
rustc-demangle = "0.1.21"
rustc-hash = "1.1.0"
rustyline = { version = "12.0.0", features = [] }
scoped-tls = "1.0.1"
scopeguard = "1.1.0"
sendgrid = { version = "0.19.2", features = ["async"] }
serde = "1.0.136"
serde_json = { version = "1.0.87", features = ["raw_value"] }
serde_path_to_error = "0.1.9"
serde_with = { version = "3.3.0", features = ["base64", "hex"] }
serial_test = "2.0.0"
sha1 = "0.10.1"
sha3 = "0.10.0"
slab = "0.4.7"
sled = "0.34.7"
smallvec = { version = "1.11", features = ["union", "const_generics"] }
sqllogictest = "0.17"
sqllogictest-engines = "0.17"
sqlparser = "0.38.0"
strum = { version = "0.25.0", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
tabled = "0.14.0"
tar = "0.4"
tempdir = "0.3.7"
tempfile = "3.8"
termcolor = "1.2.0"
thiserror = "1.0.37"
tokio = { version = "1.25.1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-util = { version = "0.7.4", features = ["time"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
tracing-appender = "0.2.2"
tracing-core = "0.1.31"
tracing-flame = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.3.1"
urlencoding = "2.1.2"
uuid = { version = "1.2.1", features = ["v4"] }
walkdir = "2.2.5"
wasmbin = "0.6"


wasmtime = { version = "15", default-features = false, features = ["cranelift", "demangle", "addr2line", "cache"] }

# We use the "ondemand" feature to allow connecting after the start,
# and reconnecting, from the tracy client to the database.
# TODO(George): Need to be able to remove "broadcast" in some build configurations.
tracing-tracy = { version = "0.10.4", features = [
  "enable",
  "system-tracing",
  "context-switch-tracing",
  "sampling",
  "code-transfer",
  "broadcast",
  "ondemand",
] }

# Vendor the openssl we rely on, rather than depend on a
# potentially very old system version.
openssl = { version = "0.10", features = ["vendored"] }

# Rocksdb ostorage backend, linked only if "rocksdb" feature enabled.
# if we link bzip, we get multiple defs
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4"] }
