[package]
name = "rust-wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[dependencies]
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"