[package]
name = "spacetimedb-bench"
version = "0.7.3"
edition = "2021"
license-file = "LICENSE"
description = "Bench library/utility for SpacetimeDB"

[[bench]]
name = "special"
harness = false

[[bench]]
name = "generic"
harness = false

[[bin]]
name = "summarize"

[lib]
bench = false

[dependencies]
spacetimedb-lib = { path = "../lib" }
spacetimedb-core = { path = "../core" }
spacetimedb-standalone = { path = "../standalone" }
spacetimedb-client-api = { path = "../client-api" }
spacetimedb-testing = { path = "../testing" }
spacetimedb-primitives = { path = "../primitives" }

ahash.workspace = true
log.workspace = true
clap.workspace = true
rusqlite.workspace = true
criterion.workspace = true
tempfile.workspace = true
rand.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
anymap.workspace = true
byte-unit.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
walkdir.workspace = true
regex.workspace = true
mimalloc.workspace = true
