[package]
name = "spacetimedb-bench"
version = "0.8.1"
edition = "2021"
license-file = "LICENSE"
description = "Bench library/utility for SpacetimeDB"

[[bench]]
name = "special"
harness = false

[[bench]]
name = "generic"
harness = false

[[bench]]
name = "callgrind"
harness = false

[[bin]]
name = "summarize"

[lib]
bench = false

[dependencies]
spacetimedb-lib = { path = "../lib" }
spacetimedb-core = { path = "../core" }
spacetimedb-sats = { path = "../sats" }
spacetimedb-standalone = { path = "../standalone" }
spacetimedb-client-api = { path = "../client-api" }
spacetimedb-testing = { path = "../testing" }
spacetimedb-primitives = { path = "../primitives" }

ahash.workspace = true
anyhow.workspace = true
anymap.workspace = true
byte-unit.workspace = true
clap.workspace = true
criterion.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
mimalloc.workspace = true
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempdir.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
itertools.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# only try to build these on linux

# also:
# we've forked iai-callgrind to add custom entrypoint support.
# FIXME(jgilles): revert to depending on the crates version if we ever get that upstreamed.

# iai-callgrind = "0.7.2"
iai-callgrind = { git = "https://github.com/clockworklabs/iai-callgrind.git", branch = "main" }
iai-callgrind-runner = { git = "https://github.com/clockworklabs/iai-callgrind.git", branch = "main" }
iai-callgrind-macros = { git = "https://github.com/clockworklabs/iai-callgrind.git", branch = "main" }
