[package]
name = "spacetimedb-bindings-cpp-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust replacement for SpacetimeDB C++ bindings type registration and FFI layer"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spacetimedb-sats = { workspace = true }
spacetimedb-lib = { workspace = true }
spacetimedb-primitives = { workspace = true }
bytemuck = { workspace = true, features = ["must_cast"] }
thiserror = { workspace = true }

[lints]
workspace = true
